--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>몽실몽실 나의 구름이야기</title>
 
     <link href="test/css/slidetest.css" rel="stylesheet">
