--- a/index.html
+++ b/index.html
@@ -575,7 +575,7 @@
             <div id="fade" class="black_overlay"></div>
           </div>
           <div class="ResultPage">
-            <button class="resultpage_2" id="resultbutton_2">상자 열어보기</button>
+            <button class="resultpage_2" id="resultbutton_2">결과 확인하기!</button>
           </div>
       </div>
 
