--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
           <div class="StartButton">
             <button id="start">꿈 꾸러 가기</button>
           </div>
-          <div class="text">결과 페이지 외 모든 작업 완료<br>Developed by Myn</div>
+          <div class="text">개발자용 원본 페이지<br>Developed by Myn a.k.a. SeHaan</div>
         </div>
         
         <div class="mySlides fade"> <!--1페이지-->
