--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
           <div class="StartButton">
             <button id="start">꿈 꾸러 가기</button>
           </div>
-          <div class="text">개발자용 원본 페이지<br>Developed by Myn a.k.a. SeHaan</div>
+          <div class="text">관리자용 페이지<br>Developed by Myn<br>a.k.a. SeHaan</div>
         </div>
         
         <div class="mySlides fade"> <!--1페이지-->
@@ -578,7 +578,10 @@
             <button class="resultpage_2" id="resultbutton_2">결과 확인하기!</button>
           </div>
       </div>
-        
+      <!--
+        <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+        <a class="next" onclick="plusSlides(1)">&#10095;</a>
+      -->  
     </div>
 
     <div id="footer">
